# ciboulette2pg

./: .env.local  .gitlab-ci.yml  CHANGELOG  Cargo.toml  README.md  cleanup_test_db.sh  rustfmt.toml  setup.sh
ciboulette2postgres_test_proc_macro/: Cargo.toml
ciboulette2postgres_test_proc_macro/src/: lib.rs
examples/: insert.rs
src/: arccow.rs  builder.rs  ciboulette_row.rs  errors.rs  lib.rs  response_type.rs  safe_ident.rs  str.rs  table_store.rs  utils.rs  value.rs
src/builder/: additional_fields.rs  builder_state.rs  delete.rs  extracting_data.rs  field_name.rs  insert.rs  is_needed.rs  mod.rs  relating_field.rs  relationships.rs  resource_data.rs  select.rs  table_field.rs  update.rs  utils.rs
src/builder/delete/: main.rs  mod.rs  rel.rs
src/builder/extracting_data/: main.rs  mod.rs  structs.rs
src/builder/extracting_data/rels/: many_to_many.rs  many_to_one.rs  mod.rs
src/builder/insert/: main.rs  mod.rs  rel.rs
src/builder/select/: finish.rs  inner_joins.rs  json.rs  left_joins.rs  main.rs  mod.rs  rel.rs  sorting.rs  utils.rs
src/builder/tests/: cte_final.rs  gen_json_builder.rs  gen_values.rs  insert.rs  insert_normal.rs  insert_rel.rs  mod.rs  select_main_insert.rs  simple_select.rs  single_rel_cte.rs  union_select_all.rs
src/builder/tests/delete/: delete_main.rs  delete_rel.rs  mod.rs
src/builder/tests/inserts/: cte_final.rs  gen_json_builder.rs  gen_values.rs  insert.rs  insert_normal.rs  insert_rel.rs  mod.rs  single_rel_cte.rs  union_select_all.rs
src/builder/tests/misc/: mod.rs  sort.rs
src/builder/tests/select/: include.rs  mod.rs  select_main.rs  select_related.rs
src/builder/tests/snapshots/: ciboulette2postgres__builder__tests__cte_final__empty_sparse.snap  ciboulette2postgres__builder__tests__cte_final__simple.snap  ciboulette2postgres__builder__tests__cte_final__sparse.snap  ciboulette2postgres__builder__tests__forced_null.snap  ciboulette2postgres__builder__tests__forced_null_fields.snap  ciboulette2postgres__builder__tests__gen_json_builder__no_sparse_fields.snap  ciboulette2postgres__builder__tests__gen_json_builder__not_included.snap  ciboulette2postgres__builder__tests__gen_json_builder__sparse_field.snap  ciboulette2postgres__builder__tests__gen_json_builder__sparse_field_empty.snap  ciboulette2postgres__builder__tests__gen_values__simple.snap  ciboulette2postgres__builder__tests__include_multi_rel.snap  ciboulette2postgres__builder__tests__include_single_rel.snap  ciboulette2postgres__builder__tests__insert__relationship_internal_.snap  (+52 more)
src/builder/update/: main.rs  mod.rs  rel.rs  utils.rs
src/creation/: main.rs  mod.rs  relationships.rs
src/graph_walker/: main.rs  mod.rs  relationships.rs
src/graph_walker/creation/: main.rs  mod.rs  relationships.rs
src/response/: mod.rs
src/tests/: init_values.rs  inserts.rs  inserts_main.rs  mod.rs  query_params.rs  response_elements.rs  run_migrations.rs  test_sql.rs  update.rs  update_rel.rs
src/tests/delete/: delete_fails.rs  delete_success.rs  mod.rs  query_params.rs
src/tests/init_values_sql/: init_article_1.sql  init_article_2.sql  init_article_3.sql  init_article_author.sql  init_comment_1.sql  init_comment_2.sql  init_comment_3.sql  init_favorite_color_1.sql  init_favorite_color_2.sql  init_favorite_color_3.sql  init_peoples_1.sql  init_peoples_2.sql  init_peoples_3.sql
src/tests/inserts/: inserts_fails.rs  inserts_success.rs  mod.rs  query_params.rs
src/tests/select/: mod.rs  query_params.rs  select_success.rs
src/tests/snapshots/: ciboulette2pg__tests__response_elements__convert_multiple_field_with_related.snap  ciboulette2pg__tests__response_elements__convert_multiple_field_without_related.snap  ciboulette2pg__tests__test_sql__db_snapshot_delete_while_testing_query_params.snap  ciboulette2pg__tests__test_sql__db_snapshot_insert_while_testing_query_params.snap  ciboulette2pg__tests__test_sql__db_snapshot_update_main_while_testing_query_params.snap  ciboulette2pg__tests__test_sql__delete_main.snap  ciboulette2pg__tests__test_sql__delete_one_to_one.snap  ciboulette2pg__tests__test_sql__insert_main_all_fields.snap  ciboulette2pg__tests__test_sql__insert_main_required_fields.snap  ciboulette2pg__tests__test_sql__insert_main_with_color.snap  ciboulette2pg__tests__test_sql__normal_people_table_and_people_article.snap  ciboulette2pg__tests__test_sql__unsetting_main_field.snap  ciboulette2pg__tests__test_sql__update_one_to_one.snap  ciboulette2pg__tests__test_sql__update_single_rel_with_fields.snap  ciboulette2pg__tests__test_sql__update_unset_one_to_one.snap  ciboulette2postgres__tests__response_elements__convert_multiple_field_with_related.snap  ciboulette2postgres__tests__test_sql__db_snapshot_delete_while_testing_query_params.snap  ciboulette2postgres__tests__test_sql__db_snapshot_insert_while_testing_query_params.snap  ciboulette2postgres__tests__test_sql__db_snapshot_update_main_while_testing_query_params.snap  ciboulette2postgres__tests__test_sql__db_snapshot_update_rels_while_testing_query_params.snap  ciboulette2postgres__tests__test_sql__delete_main.snap  ciboulette2postgres__tests__test_sql__delete_one_to_one.snap  ciboulette2postgres__tests__test_sql__insert_main_all_fields.snap  ciboulette2postgres__tests__test_sql__insert_main_required_fields.snap  ciboulette2postgres__tests__test_sql__normal_people_table_and_people_article.snap  ciboulette2postgres__tests__test_sql__update_empty.snap  ciboulette2postgres__tests__test_sql__update_many_to_one.snap  ciboulette2postgres__tests__test_sql__update_single_rel_unset_with_fields.snap
src/tests/update/: mod.rs  query_params.rs  update_main_fails.rs  update_rel_fails.rs  update_rel_success.rs  update_success.rs
tests_migrations/: V5__comments.sql  V6__article_author.sql  article-author.sql  peoples.sql
(+212 files in other folders)
