[package]
name = "ciboulette2postgres"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciboulette = { git = "https://gitlab.com/basiliq/ciboulette.git", package = "ciboulette" }
thiserror = "1.0.17"
messy_json = { git = "https://gitlab.com/basiliq/messy_json.git"}
serde_json = { version = "1.0", default-features = false, features = ["raw_value"] }
bigdecimal = "0.2"
petgraph = { version = "0.5.1", default-features = false }
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "json", "uuid", "chrono", "bigdecimal" ] }
buf_redux = { version = "0.8", features = [ "slice-deque" ] }
getset = "0.1"
numtoa = "0.2.3"
lazy_static = "1.4"

[dev-dependencies]
ciboulette_test_helper = { git = "https://gitlab.com/basiliq/ciboulette.git", package = "ciboulette_test_helper" }
url = "2.2.0"
tokio = { version = "1", features = ["full"] }
insta = "1.7"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]
