[package]
name = "ciboulette2postgres"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciboulette = { path = "../ciboulette", package = "ciboulette" }
# ciboulette = { git = "https://gitlab.com/basiliq/ciboulette.git", package = "ciboulette" }
thiserror = "1.0.17"
messy_json = { git = "https://gitlab.com/basiliq/messy_json.git"}
serde_json = { version = "1.0", default-features = false, features = ["raw_value"] }
bigdecimal = "0.2"
petgraph = { version = "0.5.1", default-features = false }
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "json", "uuid", "chrono", "bigdecimal" ] }
buf_redux = { version = "0.8", features = [ "slice-deque" ] }
getset = "0.1"
numtoa = "0.2.3"
lazy_static = "1.4"
itertools = "0.10.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
ciboulette_test_helper = { path = "../ciboulette/ciboulette_test_helper", package = "ciboulette_test_helper" }
# ciboulette_test_helper = { git = "https://gitlab.com/basiliq/ciboulette.git", package = "ciboulette_test_helper" }
ciboulette2postgres_test_proc_macro = { path = "./ciboulette2postgres_test_proc_macro" }
url = "2.2.0"
tokio = { version = "1", features = ["full"] }
insta = { version = "1.7", features = [ "redactions" ] }
sqlformat = "0.1.6"
refinery = { version = "0.5.0", features = ["tokio", "tokio-postgres"] }
num_cpus = "1.13.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]
