[package]
name = "ciboulette2pg"
version = "0.1.1"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
repository = "https://github.com/basiliqio/ciboulette2pg"
description = "Library to execute Ciboulette query to Postgres and build responses back"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciboulette = { git = "https://github.com/basiliqio/ciboulette.git", branch = "main", features = [ "sqlx_postgres" ], package = "ciboulette" }
# ciboulette = { version = "0.1", features = [ "sqlx_postgres" ], package = "ciboulette" }
thiserror = "1.0.17"
messy_json = { version = "0.2", features = [ "uuid" ] }
serde_json = { version = "1.0", default-features = false, features = ["raw_value"] }
serde = { version = "1", features = [ "derive" ] }
bigdecimal = "0.2"
petgraph = { version = "0.5.1", default-features = false }
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "json", "uuid", "chrono", "bigdecimal" ] }
buf_redux = { version = "0.8", features = [ "slice-deque" ] }
getset = "0.1"
numtoa = "0.2.3"
itertools = "0.10.0"
uuid = { version = "0.8", features = ["v4"] }
arcstr = { version = "1.0.0", features = [ "std" ] }

[dev-dependencies]
# ciboulette_test_helper = { path = "../ciboulette/ciboulette_test_helper",  package = "ciboulette_test_helper" }
ciboulette_test_helper = { git = "https://github.com/basiliqio/ciboulette.git",  branch = "main", package = "ciboulette_test_helper" }
basiliq_db_test_utils = { git = "https://github.com/basiliqio/basiliq_db_test_utils.git",  branch = "main", package = "basiliq_db_test_utils" }
basiliq_db_test_proc_macro = { git = "https://github.com/basiliqio/basiliq_db_test_utils.git",  branch = "main", package = "basiliq_db_test_proc_macro" }

url = "2.2.0"
tokio = { version = "1", features = ["full"] }
insta = { version = "1.7", features = [ "redactions" ] }
sqlformat = "0.1.6"
refinery = { version = "0.5.0", features = ["tokio", "tokio-postgres"] }
num_cpus = "1.13.0"
lazy_static = "1.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]
